Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2813. Tez UI: add counter data for rest api calls to AM Web Services v2
  TEZ-2660. Tez UI: need to show application page even if system metrics publish is disabled.
  TEZ-2787. Tez AM should have java.io.tmpdir=./tmp to be consistent with tasks
  TEZ-2780. Tez UI: Update All Tasks page while in progress
  TEZ-2792. addendum fix build failure for java 6
  TEZ-2792. Add AM web service API for tasks
  TEZ-2807. Log data in the finish event instead of the start event
  TEZ-2789. Backport events added in TEZ-2612 to branch-0.7
  TEZ-2766. Tez UI: Add vertex in-progress info in DAG details
  TEZ-2768. Log a useful error message when the summary stream cannot be closed when shutting
  down an AM.
  TEZ-2745. ClassNotFoundException of user code should fail dag
  TEZ-2761. addendum fix build failure for java 6
  TEZ-2761. Tez UI: update the progress on the dag and vertices pages with info from AM
  TEZ-2754. Tez UI: StartTime & EndTime is not displayed with right format in Graphical View
  TEZ-2731. Fix Tez GenericCounter performance bottleneck
  TEZ-2752. logUnsuccessful completion in Attempt should write original finish
  time to ATS
  TEZ-2755. Fix findbugs warning in TezClient
  TEZ-2767. Make TezMxBeanResourceCalculator the default resource calculator.
  TEZ-2602. Throwing EOFException when launching MR job
  TEZ-2575. Handle KeyValue pairs size which do not fit in a single block in PipelinedSorter
  TEZ-2198. Fix sorter spill counts
  TEZ-2440. Sorter should check for indexCacheList.size() in flush()
  TEZ-2742. VertexImpl.finished() terminationCause hides member var of the
  same name
  TEZ-2662. Provide a way to check whether AM or task opts are valid and error if not.
  TEZ-2300. TezClient.stop() takes a lot of time or does not work sometimes
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge.